--- a/client/templates/index.html
+++ b/client/templates/index.html
@@ -14,6 +14,16 @@
     img {
         max-width: 130%;
     }
+    pre {
+        margin: 0;
+    }
+    .input-cell, .output-cell {
+        margin: 0.5em;
+    }
+    .input-cell {
+        border: 1px solid black;
+        padding: 0.5em;
+    }
     {{ styles }}
 </style>
 <body>
