refactor Renderer away

--- a/client/templates/index.html
+++ b/client/templates/index.html
@@ -17,12 +17,13 @@
     pre {
         margin: 0;
     }
-    .input-cell, .output-cell {
-        margin: 0.5em;
-    }
-    .input-cell {
+    .code-cell {
         border: 1px solid black;
+        margin: 0.5em;
         padding: 0.5em;
+    }
+    .code-cell .code {
+        background-color: #e6e6e6;
     }
     {{ styles }}
 </style>
