--- a/client/templates/index.html
+++ b/client/templates/index.html
@@ -5,9 +5,9 @@
 <style>
     body {
         margin: 1em auto;
-        max-width: 90ch;
+        max-width: 94ch;
         padding: 0 .62em;
-        font: 1em sans-serif;
+        font-family: monospace;
     }
     img {
         max-width: 130%;
