--- a/client/templates/index.html
+++ b/client/templates/index.html
@@ -15,10 +15,16 @@
     pre {
         margin: 0;
     }
+    .code-cell, .text-cell {
+        font-family: sans-serif;
+    }
     .code-cell {
         border: 1px solid black;
         margin: 0.5em;
         padding: 0.5em;
+    }
+    .evaluating {
+        border-color: red;
     }
     .code-cell .code {
         background-color: #e6e6e6;
