--- a/client/templates/index.html
+++ b/client/templates/index.html
@@ -19,15 +19,16 @@
         font-family: sans-serif;
     }
     .code-cell {
-        border: 1px solid black;
+        /* border: 1px solid black; */
         margin: 0.5em;
-        padding: 0.5em;
     }
     .evaluating {
         border-color: red;
     }
     .code-cell .code {
-        background-color: #e6e6e6;
+        background-color: #edeeef;
+        padding: 0.5em;
+        margin-bottom: 0.2em;
     }
     {{ styles }}
 </style>
