--- a/client/templates/index.html
+++ b/client/templates/index.html
@@ -24,7 +24,9 @@
     .code-cell .code {
         background-color: #edeeef;
         padding: 0.5em;
-        margin-bottom: 0.2em;
+    }
+    .code-cell .output{
+        margin: 0.5em 0;
     }
     .evaluating .code {
         background-color: #ffeded;
