--- a/client/templates/index.html
+++ b/client/templates/index.html
@@ -33,9 +33,28 @@
     }
     {{ styles }}
 </style>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.7.1/katex.min.css" integrity="sha384&#45;wITovz90syo1dJWVh32uuETPVEtGigN07tkttEqPv+uR2SE/mbQcG7ATL28aI9H0" crossorigin="anonymous">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.7.1/katex.min.js" integrity="sha384-/y1Nn9+QQAipbNQWU65krzJralCnuOasHncUFXGkdwntGeSvQicrYkiUBwsgUqc1" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.7.1/contrib/auto-render.min.js" integrity="sha384-dq1/gEHSxPZQ7DdrM82ID4YVol9BYyU7GbWlIwnwyPzotpoc57wDw/guX8EaYGPx" crossorigin="anonymous"></script>
 <body>
     <div id="cells">
         {{ cells }}
     </div>
     <script src="client.js"></script>
+<script>
+function renderMath(elem) {
+  try {
+    renderMathInElement(elem, { delimiters: [
+      { left: '\\[', right: '\\]', display: true },
+      { left: '$', right: '$', display: false },
+    ] });
+  } catch (e) {
+    console.warn(e);
+  }
+}
+
+Array.from(document.getElementsByClassName('text-cell')).forEach((cell) => {
+  renderMath(cell);
+});
+</script>
 </body>
