--- a/client/templates/index.html
+++ b/client/templates/index.html
@@ -1,4 +1,5 @@
 <!doctype html>
+<!-- vim: set ft=liquid: -->
 <title>notebook</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -16,7 +17,7 @@
         margin: 0;
     }
     .code-cell, .text-cell {
-        font-family: sans-serif;
+        font-family: serif;
     }
     .code-cell {
         margin: 0.5em;
@@ -37,10 +38,9 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.7.1/katex.min.js" integrity="sha384-/y1Nn9+QQAipbNQWU65krzJralCnuOasHncUFXGkdwntGeSvQicrYkiUBwsgUqc1" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.7.1/contrib/auto-render.min.js" integrity="sha384-dq1/gEHSxPZQ7DdrM82ID4YVol9BYyU7GbWlIwnwyPzotpoc57wDw/guX8EaYGPx" crossorigin="anonymous"></script>
 <body>
-    <div id="cells">
-        {{ cells }}
-    </div>
-    <script src="client.js"></script>
+<div id="cells">
+{{ cells }}
+</div>
 <script>
 function renderMath(elem) {
   try {
@@ -57,4 +57,5 @@ Array.from(document.getElementsByClassName('text-cell')).forEach((cell) => {
   renderMath(cell);
 });
 </script>
+{% if client %}<script src="client.js"></script>{% endif %}
 </body>
