factor out websockets, use aiohttp

--- a/client/templates/index.html
+++ b/client/templates/index.html
@@ -57,7 +57,5 @@ Array.from(document.getElementsByClassName('text-cell')).forEach((cell) => {
   renderMath(cell);
 });
 </script>
-{% if ws_port %}
-<script src="client.js" ws-port="{{ ws_port }}"></script>
-{% endif %}
+{% if client %}<script src="client.js"></script>{% endif %}
 </body>
