--- a/client/templates/index.html
+++ b/client/templates/index.html
@@ -25,6 +25,7 @@
     .code-cell .code {
         background-color: #edeeef;
         padding: 0.5em;
+        overflow-x: scroll;
     }
     .code-cell .output{
         margin: 0.5em 0;
