--- a/thebe/client/templates/index.html
+++ b/thebe/client/templates/index.html
@@ -1,5 +1,7 @@
 <!doctype html>
 <!-- vim: set ft=liquid: -->
+<html>
+<head>
 <title>notebook</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,35 +12,45 @@
         padding: 0 .62em;
         font-family: monospace;
     }
-    img {
-        max-width: 130%;
-    }
-    pre {
-        margin: 0;
-    }
-    .code-cell, .text-cell {
-        font-family: serif;
-    }
-    .code-cell {
-        margin: 0.5em;
-    }
+    img { max-width: 130%; }
+    pre { margin: 0; }
+    .code-cell, .text-cell { font-family: serif; }
+    .code-cell { margin: 0.5em 0; }
     .code-cell .code {
         background-color: #edeeef;
         padding: 0.5em;
+        margin-bottom: 0.5em;
         overflow-x: scroll;
     }
-    .code-cell .output{
-        margin: 0.5em 0;
+    .code-cell .output { margin-bottom: 0.5em; }
+    .output pre {
+        white-space: pre-wrap;
+        word-break: break-all;
     }
-    .evaluating .code {
-        background-color: #ffeded;
+    .output table {
+        border-collapse: collapse;
+        font-family: sans-serif;
+        font-size: 0.83em;
     }
+    .output table, th, td { border: none; }
+    .output th, td {
+        padding: 0.3em 0.6em;
+        vertical-align: middle !important;
+    }
+    .output tbody tr:nth-child(odd) { background: #f1f2f3; }
+    .output tr:hover {
+        background: #d8e7ff !important;
+    }
+    .output thead { border-bottom: 1px solid black; }
+    .output:empty { display: none; }
+    .evaluating .code { background-color: #ffeded; }
     {{ styles }}
     .katex { font-size: 1em !important; }
 </style>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.7.1/katex.min.css" integrity="sha384&#45;wITovz90syo1dJWVh32uuETPVEtGigN07tkttEqPv+uR2SE/mbQcG7ATL28aI9H0" crossorigin="anonymous">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.7.1/katex.min.js" integrity="sha384-/y1Nn9+QQAipbNQWU65krzJralCnuOasHncUFXGkdwntGeSvQicrYkiUBwsgUqc1" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.7.1/contrib/auto-render.min.js" integrity="sha384-dq1/gEHSxPZQ7DdrM82ID4YVol9BYyU7GbWlIwnwyPzotpoc57wDw/guX8EaYGPx" crossorigin="anonymous"></script>
+</head>
 <body>
 <div id="cells">
 {{ cells }}
@@ -61,3 +73,4 @@ Array.from(document.getElementsByClassName('text-cell')).forEach((cell) => {
 </script>
 {% if client %}<script src="client.js"></script>{% endif %}
 </body>
+</html>
