--- a/thebe/client/templates/index.html
+++ b/thebe/client/templates/index.html
@@ -8,7 +8,7 @@
 <style>
     body {
         margin: 1em auto;
-        max-width: 94ch;
+        max-width: 90ch;
         padding: 0 .62em;
         font-family: monospace;
     }
@@ -23,6 +23,7 @@
         overflow-x: scroll;
     }
     .code-cell .output { margin-bottom: 0.5em; }
+    .text-cell { font-size: 1.15em; }
     .output pre {
         white-space: pre-wrap;
         word-break: break-all;
