prepare for modelines

--- a/thebe/client/templates/index.html
+++ b/thebe/client/templates/index.html
@@ -43,7 +43,7 @@
         background: #d8e7ff !important;
     }
     .output thead { border-bottom: 1px solid black; }
-    .output:empty { display: none; }
+    .output:empty, .code:empty { display: none; }
     .evaluating .code { background-color: #ffeded; }
     {{ styles }}
     .katex { font-size: 1em !important; }
