refactor Server to use high-level aiohttp server

--- a/knitj/client/templates/index.html
+++ b/knitj/client/templates/index.html
@@ -70,7 +70,7 @@ function renderMath(elem) {
   }
 }
 </script>
-{% if client %}<script src="client.js"></script>{% endif %}
+{% if client %}<script src="static/client.js"></script>{% endif %}
 </body>
 </html>
 <!-- vim: set ft=liquid: -->
