--- a/knitj/client/templates/index.html
+++ b/knitj/client/templates/index.html
@@ -49,6 +49,7 @@
     .evaluating .code { background-color: #ffeded !important; }
     {{ styles }}
     .katex { font-size: 1em !important; }
+    .katex-html .tag { position: static !important; float: right; }
 </style>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.10.0-rc.1/dist/katex.min.css" integrity="sha384-D+9gmBxUQogRLqvARvNLmA9hS2x//eK1FhVb9PiU86gmcrBrJAQT8okdJ4LMp2uv" crossorigin="anonymous">
 <script defer src="https://cdn.jsdelivr.net/npm/katex@0.10.0-rc.1/dist/katex.min.js" integrity="sha384-483A6DwYfKeDa0Q52fJmxFXkcPCFfnXMoXblOkJ4JcA8zATN6Tm78UNL72AKk+0O" crossorigin="anonymous"></script>
