--- a/knitj/client/templates/index.html
+++ b/knitj/client/templates/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-<title>notebook</title>
+<title>{{ title }}</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
