limit height of output cells

--- a/knitj/client/templates/index.html
+++ b/knitj/client/templates/index.html
@@ -24,7 +24,11 @@
         margin-bottom: 0.5em;
         overflow-x: scroll;
     }
-    .code-cell .output { margin-bottom: 0.5em; }
+    .code-cell .output {
+        margin-bottom: 0.5em;
+        max-height: 50em;
+        overflow-y: scroll;
+    }
     .text-cell { font-size: 1.15em; }
     .output pre {
         white-space: pre-wrap;
