--- a/knitj/client/templates/index.html
+++ b/knitj/client/templates/index.html
@@ -10,7 +10,7 @@
 <style type="text/css">
     body {
         margin: 1em auto;
-        max-width: 80ch;
+        max-width: 85ch;
         padding: 0 .62em;
         font-family: monospace;
     }
@@ -31,7 +31,7 @@
     }
     .text-cell { font-size: 1.15em; }
     .output pre {
-        white-space: pre-wrap;
+        white-space: pre;
         word-break: break-all;
     }
     .output table {
